--- a/order.html
+++ b/order.html
@@ -1,18 +1,39 @@
-Order a Melongram
+<!doctype html>
+<html>
+    <head>
+        Order a Melongram
+    </head>
 
-There's no better way to show a loved one you care than with a Melongram.
+    <body>
+        <h1>Order a Melongram</h1>
+        <p>
+            There's no better way to show a loved 
+            one you care than with a Melongram.
+        </p>
+        <p>
+            Each Melongram comes with a custom message 
+            printed on high-quality cardstock and your 
+            choice of a hand-picked, premium melon.
+        </p>
 
-Each Melongram comes with a custom message printed on high-quality cardstock
-and your choice of a hand-picked, premium melon.
-
-Melon Options
-
-Choose from one of these melons:
-
-Watermelon $1,200.00
-Canteloupe $400.00
-Honeydew $1,750,00.00
-
+        <h2>Melon Options</h2>
+        <p>
+            Choose from one of these melons:
+        </p>
+        <table>
+            <tr>
+                <td>Watermelon</td> 
+                <td>$1,200.00</td>
+            </tr>
+            <tr>
+                <td>Canteloupe</td> 
+                <td>$400.00</td>
+            </tr>
+            <tr>
+                <td>Honeydew</td> 
+                <td>$1,750,00.00</td>
+            </tr>
+        </table>    
 Order Form
 
 Your name
@@ -33,3 +54,5 @@ Enter your message:
 
 Subscribe to our newsletter
 Yes
+    </body>
+</html>
